# pdpl-autopilot

./: .env.example  .gitignore  .importlinter  CLAUDE.md  README.md  alembic.ini  pyproject.toml
build-log/: 2026-06-11-data-model.md  2026-06-12-app-foundation.md  2026-06-12-check-runs.md  2026-06-13-first-real-decision.md  2026-06-13-readiness-scoring.md  2026-06-15-http-surface-phase2-complete.md  2026-06-16-session-a-alert-durability.md  2026-06-17-session-b1-signed-webhook-delivery.md  2026-06-17-session-b2-outbox-worker-phase3-complete.md  2026-06-18-c1-ai-explanation-safety-floor.md  2026-06-18-phase4-opened-ai-explanation-adrs.md  2026-06-19-c2-eval-harness-first-numbers.md  2026-06-22-c3a-gemini-explainer.md  2026-06-23-c3b-ai-explanations-cache.md  2026-06-24-c4a-runtime-orchestration.md  2026-06-24-c4b-explanation-http-surface.md  2026-06-25-phase5-db-connectivity-infra.md  2026-06-26-phase5-load-testing-stage1-2.md  2026-06-27-phase5-load-testing-stage3-explanation-holdtime-fix.md  2026-06-27-v2-prompt-not-assessed-neutral-framing.md  2026-06-28-portfolio-case-study-2-model-drift.md  2026-06-28-portfolio-case-study-attribution-readme.md
docs/: 02-data-model.md  product-definition.md
eval-runs/: gemini-2.5-flash_gap-ar-v1_20260622T195344Z.yaml  gemini-2.5-flash_gap-ar-v1_20260627T212743Z.yaml  gemini-2.5-flash_gap-ar-v2_20260627T210851Z.yaml  gemini-2.5-flash_gap-ar-v2_20260627T212044Z.yaml
load/: .env.load  README.md  check_gate.py  checks_sweep.py  explain_app.py  pool_sweep.py  probe_app.py  reset_db.py
migrations/: env.py
scripts/: _rebuild_app_url.py  mask_secrets.sed
tests/: conftest.py  stubs.py  test_ai_explanations_cache.py  test_api_answers.py  (+22 more)
(+73 files in other folders)
