[project]
name = "pdpl-autopilot"
version = "0.1.0"
description = "PDPL readiness assistant for small and medium Saudi businesses"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
